[tests] cleanup (formatting)
GitOrigin-RevId: 636c004316bbe830cabdaeedce29f3c8b509b15e